# BrainPrint

./: .gitignore  README.md  index.html  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md  questions-help-support.md
.github/workflows/: build.yml  code-style.yml  doc.yml  publish.yml  pytest.yml  pytest_local.yml
brainprint/: __init__.py  asymmetry.py  brainprint.py  brainprint_postproc.py  configuration.py  surfaces.py  utils.py
brainprint/cli/: __init__.py  help_text.py  parser.py  utils.py
brainprint/utils/: _config.py  utils.py
brainprint/utils/tests/: test_asymmetry.py  test_brainprint.py  test_files.py  test_surfaces.py
brainprintpython/: __init__.py  brainPrint.py  brainPrintPostProc.py  computeABtria.py  laplaceTria.py  pyBrainPrint.py  pyPostProc.py  pyShapeDNA.py  pyUtilsIO.py
dev/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
dev/.doctrees/: index.doctree
dev/.doctrees/api/: index.doctree
dev/_sources/: index.rst.txt
dev/_static/: documentation_options.js
dev/api/: index.html
doc/: brainprint.cli.rst  brainprint.commands.rst  brainprint.rst  brainprint.utils.rst  brainprint.utils.tests.rst  conf.py  index.rst  links.inc  modules.rst
doc/api/: bp.rst  brainprint.classes.rst  brainprint.modules.rst  index.rst
src/brainprint/: __init__.py  asymmetry.py  brainprint.py  configuration.py  messages.py  surfaces.py  utils.py
src/cli/: __init__.py  help_text.py  parser.py  utils.py
test_cases/: test_asymmetry.py  test_brainprint.py  test_surfaces.py
